osd: update recovery stats when the recovery completes

Neither ReplicatedBackend nor ECBackend increments the num_recovered
counter and friends when not doing a local recovery. Pass the stats to
on_global_recover instead so that it's called even if the local copy
didn't need to be recovered.

http://tracker.ceph.com/issues/13453 Fixes: #13453

Signed-off-by: Loic Dachary <ldachary@redhat.com>